--- a/apps/webauthn-angular/src/app/layout/content/components/nav-bar/nav-bar.component.html
+++ b/apps/webauthn-angular/src/app/layout/content/components/nav-bar/nav-bar.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar>
-	<span style="font-size: 2rem; font-weight: 400">Angular WebAuthn </span>
+	<span class="nav-bar-title">Angular WebAuthn </span>
 	<span class="spacer"></span>
 
 	<button mat-icon-button matTooltip="My Account" [matMenuTriggerFor]="userAccountMenu">
@@ -7,12 +7,12 @@
 	</button>
 	<mat-menu #userAccountMenu [overlapTrigger]="false" yPosition="below">
 		<mat-nav-list class="nav-list">
-			<span> Awesome User </span>
+			<span> {{ user().username }} </span>
 		</mat-nav-list>
 
 		<mat-divider />
 
-		<button mat-menu-item>
+		<button mat-menu-item (click)="logout()">
 			<mat-icon fontIcon="exit_to_app" />
 			Log out
 		</button>
