--- a/apps/webauthn-angular/src/app/pages/home/components/authenticator/authenticator.component.scss
+++ b/apps/webauthn-angular/src/app/pages/home/components/authenticator/authenticator.component.scss
@@ -1,6 +1,34 @@
-dd {
-	font-size: 90%;
-	color: #666;
-	margin-inline-start: 10px;
-	word-break: break-all;
+.authenticator {
+	width: 400px;
+	height: 400px;
+	margin: 2rem;
+	@media (width <= 768px) {
+		margin: 0.2rem;
+	}
+
+	&__header {
+		display: flex;
+		justify-content: space-between;
+		width: 100%;
+		&__title {
+			width: 70%;
+		}
+	}
+
+	&__content {
+		overflow-y: auto;
+		&__items {
+			display: flex;
+			flex-direction: column;
+			gap: 0.5rem;
+			padding: 1rem;
+		}
+	}
+
+	dd {
+		font-size: 90%;
+		color: #666;
+		margin-inline-start: 10px;
+		word-break: break-all;
+	}
 }
