--- a/apps/webauthn-angular/src/styles.scss
+++ b/apps/webauthn-angular/src/styles.scss
@@ -1,13 +1,28 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+	height: 100%;
+}
+body {
+	margin: 0;
+	font-family: Roboto, 'Helvetica Neue', sans-serif;
+}
 
 .register-dialog-container {
-    width: 600px;
-    height: 550px;
-    @media  (width <= 600px) {
-        width: 400px;
-        height: 550px;
-    }
+	width: 600px;
+	height: 550px;
+	@media (width <= 600px) {
+		width: 400px;
+		height: 550px;
+	}
+}
+
+.json-viewer-dialog-container {
+	width: 600px;
+	height: 550px;
+	@media (width <= 600px) {
+		width: 400px;
+		height: 430px;
+	}
 }
