chore(webauthn-angular): Add barrel with alias to clean imports

--- a/apps/webauthn-angular/src/app/layout/content/components/nav-bar/nav-bar.component.html
+++ b/apps/webauthn-angular/src/app/layout/content/components/nav-bar/nav-bar.component.html
@@ -1,20 +1,21 @@
 <mat-toolbar>
 	<span class="nav-bar-title">Angular WebAuthn </span>
 	<span class="spacer"></span>
-
-	<button mat-icon-button matTooltip="My Account" [matMenuTriggerFor]="userAccountMenu">
-		<mat-icon fontIcon="account_circle" class="icon-lg" />
-	</button>
-	<mat-menu #userAccountMenu [overlapTrigger]="false" yPosition="below">
-		<mat-nav-list class="nav-list">
-			<span> {{ user().username }} </span>
-		</mat-nav-list>
-
-		<mat-divider />
-
-		<button mat-menu-item (click)="logout()">
-			<mat-icon fontIcon="exit_to_app" />
-			Log out
+	@if (user()) {
+		<button mat-icon-button matTooltip="My Account" [matMenuTriggerFor]="userAccountMenu">
+			<mat-icon fontIcon="account_circle" class="icon-lg" />
 		</button>
-	</mat-menu>
+		<mat-menu #userAccountMenu [overlapTrigger]="false" yPosition="below">
+			<mat-nav-list class="nav-list">
+				<span> {{ user().username }} </span>
+			</mat-nav-list>
+
+			<mat-divider />
+
+			<button mat-menu-item (click)="logout()">
+				<mat-icon fontIcon="exit_to_app" />
+				Log out
+			</button>
+		</mat-menu>
+	}
 </mat-toolbar>
