fix(webauthn-angular): Fixed overflow in register dialog & refresh when login

--- a/apps/webauthn-angular/src/app/pages/home/components/register/register.component.html
+++ b/apps/webauthn-angular/src/app/pages/home/components/register/register.component.html
@@ -1,5 +1,5 @@
 <div class="register">
-	<mat-dialog-content style="overflow: hidden">
+	<mat-dialog-content>
 		@if (!hasAccount()) {
 			<ng-container [ngTemplateOutlet]="signIn" />
 		} @else {
