perf(webauthn-angular): Improve styles & refresh authenticator with single service global

--- a/apps/webauthn-angular/src/app/pages/home/components/auth-options/auth-options.component.html
+++ b/apps/webauthn-angular/src/app/pages/home/components/auth-options/auth-options.component.html
@@ -4,7 +4,7 @@
 		ISUVPPA
 	</button>
 
-	<button mat-button (click)="registerWebAuthn()">
+	<button mat-button (click)="registerWebAuthn()" [disabled]="!user()">
 		<mat-icon fontIcon="fingerprint" class="icon-lg" />
 		REGISTER AUTHENTICATOR
 	</button>
