--- a/apps/webauthn-angular/src/app/layout/content/content-layout.component.html
+++ b/apps/webauthn-angular/src/app/layout/content/content-layout.component.html
@@ -1,5 +1,5 @@
 <app-nav-bar />
-@if (isVisible()) {
-	<mat-progress-bar mode="indeterminate"></mat-progress-bar>
-}
+
+<mat-progress-bar mode="indeterminate" [style.visibility]="visibility()" />
+
 <router-outlet />
