--- a/apps/webauthn-angular/src/app/pages/home/components/login/login.component.html
+++ b/apps/webauthn-angular/src/app/pages/home/components/login/login.component.html
@@ -1,4 +1,7 @@
 <div class="login">
+	<div>
+		<button mat-button (click)="goBack()" [disabled]="isLoading()">Go Back</button>
+	</div>
 	<h4 class="login__title" mat-dialog-title>Log In</h4>
 	<form [formGroup]="loginForm" class="login__form">
 		<mat-form-field>
@@ -18,5 +21,7 @@
 		Log In
 	</button>
 
-	<button mat-button (click)="goBack()" [disabled]="isLoading()">Go Back</button>
+	<button mat-mini-fab (click)="loginWithWebAuthn()" [disabled]="!hasUserNameStored">
+		<mat-icon fontIcon="fingerprint" class="icon-lg" />
+	</button>
 </div>
