--- a/apps/webauthn-angular/src/app/pages/home/components/register/register.component.html
+++ b/apps/webauthn-angular/src/app/pages/home/components/register/register.component.html
@@ -13,26 +13,54 @@
 	<form [formGroup]="registerForm" class="register__form">
 		<mat-form-field>
 			<mat-label>UserName</mat-label>
-			<input matInput formControlName="username" type="text" placeholder="Username" />
+			<input
+				data-test-id="username"
+				matInput
+				formControlName="username"
+				type="text"
+				placeholder="Username"
+			/>
 		</mat-form-field>
 		<mat-form-field>
 			<mat-label>Name</mat-label>
-			<input matInput formControlName="name" type="text" placeholder="Name" />
+			<input data-test-id="name" matInput formControlName="name" type="text" placeholder="Name" />
 		</mat-form-field>
 		<mat-form-field>
 			<mat-label>Last Name</mat-label>
-			<input matInput formControlName="lastName" type="text" placeholder="Last Name" />
+			<input
+				data-test-id="lastName"
+				matInput
+				formControlName="lastName"
+				type="text"
+				placeholder="Last Name"
+			/>
 		</mat-form-field>
 		<mat-form-field>
 			<mat-label>Password</mat-label>
-			<input matInput formControlName="password" type="password" placeholder="Password" />
+			<input
+				data-test-id="password"
+				matInput
+				formControlName="password"
+				type="password"
+				placeholder="Password"
+			/>
 		</mat-form-field>
 
 		<div mat-dialog-actions style="display: flex; flex-direction: column; gap: 1rem">
-			<button mat-flat-button (click)="register()" [disabled]="registerForm.invalid || isLoading()">
+			<button
+				data-test-id="button-register"
+				mat-flat-button
+				(click)="register()"
+				[disabled]="registerForm.invalid || isLoading()"
+			>
 				Register
 			</button>
-			<button mat-button (click)="showLogin()" [disabled]="isLoading()">
+			<button
+				data-test-id="button-have-account"
+				mat-button
+				(click)="showLogin()"
+				[disabled]="isLoading()"
+			>
 				Have an account? Click here
 			</button>
 		</div>
